// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[routes] <NewsArticleRoute /> renders 404 error page when no news article exists 1`] = `
<article
  class="ErrorPage"
>
  <header
    class="PageHeader"
  >
    <h1>
      Page not found
    </h1>
  </header>
  <div
    class="ErrorPage-content"
  >
    <svg
      attr="[object Object]"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <p>
      This page does not exist - please use the site navigation to find what you're looking for.
    </p>
  </div>
</article>
`;

exports[`[routes] <NewsArticleRoute /> renders 500 error page when slug isn't in the store 1`] = `
<article
  class="ErrorPage"
>
  <header
    class="PageHeader"
  >
    <h1>
      An error has occurred
    </h1>
  </header>
  <div
    class="ErrorPage-content"
  >
    <svg
      attr="[object Object]"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <p>
      An error has occurred, please try again.
    </p>
  </div>
</article>
`;

exports[`[routes] <NewsArticleRoute /> renders a loader when item is being fetched 1`] = `
<span
  class="Loader PageLoader"
>
  <div
    class="Loader-animation"
  >
    <span />
    <span />
    <span />
  </div>
</span>
`;

exports[`[routes] <NewsArticleRoute /> renders correctly 1`] = `
<article
  class="NewsArticle"
>
  <header
    class="PageHeader"
  >
    <h1>
      New website launched
    </h1>
  </header>
  <div
    class="NewsArticle-body"
  >
    <figure
      class="Image NewsArticle-image isLoading"
    >
      <div
        class="Image-wrapper"
      >
        <img
          alt="New website launched"
          src="https://s3.amazonaws.com/mynameisviii-static/news/new-website-launched.jpg"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader-animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <section
      class="NewsArticle-meta"
    >
      <div
        class="NewsArticle-posted"
      >
        <svg
          attr="[object Object]"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
         
        <span>
          Posted
        </span>
         
        <time
          class="DateTime"
          datetime="2018-06-20T21:20:00"
          title="Wednesday, June 20, 2018, 9:20 PM"
        >
          <span>
            in 6 months
          </span>
        </time>
         
        <span>
          by
        </span>
         Viii
      </div>
      <div
        class="Type Type-news"
      >
        <svg
          attr="[object Object]"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M23 12l-2.44-2.78.34-3.68-3.61-.82-1.89-3.18L12 3 8.6 1.54 6.71 4.72l-3.61.81.34 3.68L1 12l2.44 2.78-.34 3.69 3.61.82 1.89 3.18L12 21l3.4 1.46 1.89-3.18 3.61-.82-.34-3.68L23 12zm-10 5h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
         News
      </div>
    </section>
    <section
      class="NewsArticle-content"
    >
      <div
        class="NewsArticle-contentText"
      >
        <p>
          The brand new official Viii website is now live!
        </p>
        <p>
          The new site features a fully responsive design for viewing on all mobile devices, as well as desktop browsers, plus an all-new news section, releases section and an appearances section for upcoming shows.
        </p>
        <p>
          Stay tuned for more features to be released in the near future.
        </p>
      </div>
    </section>
  </div>
</article>
`;
